div category ok

--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -1,17 +1,17 @@
 .tags{
     width: auto;
     display: -webkit-inline-box;
-    //border:1px solid red;
-    
-    p{
-        margin:0;
-        padding:10px;
-    }
+    border:1px solid rebeccapurple;
+    margin: 10px;
+    padding:10px;
 }
-#distance{
-    //background-color: aquamarine;
+.distance{
     width: 15%;
     height: 30px;
-    margin-left: 80%;
+    font-style: italic;
+    font-size: 14px;
+    color: darkgray;
+    float: right;
+    padding-bottom: 10px;
 
 }
