--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -27,11 +27,13 @@
 
         <h3>NOM boutique</h3>
         <hr>
-        <div id="distance">Distance</div>
+        <div class="distance">Distance</div>
         <p>Adresse</p>
-        <div class='tags'><p>Tag 1</p></div>
-        <div class='tags'><p>Tag 2</p></div>
-        <div class='tags'><p>Tag 2</p></div>
+        <div style="text-align: center;" >
+            <div class='tags'>Tag 1</div>
+            <div class='tags'>Tag 2</div>
+            <div class='tags'>Tag 2</div>
+        </div>
         
     </div>
 
