--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -58,11 +58,10 @@ masuperfonction = function() {
             openNav();
             $("#mainSidenav").html("");
             m = document.createElement("p");
-            l = document.createElement("h3");
+            l = document.createElement("p");
             k = document.createElement("a");
-            j = document.createElement("p");
+            j = document.createElement("h1");
             i = document.createElement("h1");
-            p = document.createElement("hr");
             if(local.name == "") {
               $(k).html("Ajouter un nom");
               $(k).appendTo($("#mainSidenav"));
@@ -72,21 +71,18 @@ masuperfonction = function() {
               $(m).appendTo($("#mainSidenav"));
             }
             else {
-              
+              $(i).html("Nom :");
               $(i).attr('id', 'name_id');
-              $(i).html("Informations");
-              $(p).html("");
               $(l).html(local.name); 
-              $(j).html("Adresse :" + local.address);
-              $(i).html("Catégories");
-              $(i).html("Commentaires");
+              $(j).html("Adresse :");
+              $(m).html(local.address);
               $(i).appendTo($("#mainSidenav"));
               $(l).appendTo($("#mainSidenav"));              
               $(j).appendTo($("#mainSidenav"));            
               $(m).appendTo($("#mainSidenav"));
             }
           });
-          // marker.bindPopup( '<p>' + '' + `${local.name}` + '<br />' + ''  + `${local.address}` + '');
+          // marker.bindPopup( '<p>' + '' + `${local.name}` + '<br />' + ''  + `${local.address}` + '</p>');
           // $(marker).click(function() {
           // this.openPopup();
           // });
