--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -490,7 +490,13 @@ input[type=submit] {
         color: rebeccapurple;
         
         transition: 0.3s;
-    }   
+    }
+    h2{
+        padding-left:32px;
+    } 
+    h1{
+            padding-left:32px;  
+    }  
 
      p {
     padding: 8px 8px 8px 32px;
