prod auto depuis branche front

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -38,6 +38,13 @@
     h3{
       text-align: center;
       padding-top:6px;
+      i{
+            float:none;
+            padding:0px;
+            color:red;
+            font-size:inherit;
+          padding-right: 0px; 
+      }
     }
     i{
       float:right;
