--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -1,9 +1,16 @@
 .tags{
     width: auto;
     display: -webkit-inline-box;
-    border:1px solid rebeccapurple;
-    margin: 10px;
-    padding:10px;
+    margin-bottom: 5px;
+    margin-right: 3px;
+    background-color: rgba(102, 51, 153,0.3);
+    font-size: 13px;
+    padding-right: 5px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    border-left: 2px solid rebeccapurple;
+    color: #2b2a2a;
+    padding-left: 5px;
 }
 .distance{
     width: 15%;
@@ -13,5 +20,4 @@
     color: darkgray;
     float: right;
     padding-bottom: 10px;
-
 }
