--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>	
     <div class="container">
         <div class="row">
-            <p><b>Projet de la Team Knackis</b></p>
+            <p><b></b></p>
             <p>Remerciements à <a href="https://www.thehackingproject.org/"><b>The Hacking Project</b></a></p>
         </div>
         <div class="row">  
@@ -21,6 +21,6 @@
         </div>
     </div>
     <div>
-        <p id='copyright'>Team Knackis © 2018 | Made with <i class="fa fa-heart-o" aria-hidden="true"></i></p>
+        <p id='copyright'>L'équipe Pintiq- 2018 | Made with <i class="fa fa-heart-o" aria-hidden="true"></i></p>
     </div>
 </footer>
