--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bienvenue sur UrbEmp <%= @user.username %></h1>
+    <h1>Bienvenue sur Pintiq <%= @user.username %></h1>
     <p>
       Tu t'es connecté avec succès sur notre site. Yoohoo !
     </p>
@@ -14,6 +14,6 @@
       Pour te connecter sur le site, utilise le lien suivant <%= @login %>.
     </p>
     <p>Merci d'avoir rejoins notre aventure, à très vite.</p>
-    <p> Paul</p>
+    <p>Paul, de l'équipe Pintiq</p>
   </body>
 </html>
