--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,4 +1,4 @@
-Bienvenue sur UrbEmp <%= @user.username %></h1>
+Bienvenue sur Pintiq <%= @user.username %></h1>
 -----------------------------------------------
  Tu t'es connecté avec succès sur notre site. Yoohoo !
 Tu peux commencer par ajouter une boutique en appuyant sur le + violet en haut à droite ;)
@@ -6,4 +6,4 @@ Pour te connecter sur le site, utilise le lien suivant <%= @login %>.
 
 Merci d'avoir rejoins notre aventure, à très vite.
 
-Paul
+Paul, de l'équipe Pintiq
