--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,10 @@
 <div class="page">
   <%= image_tag("photos/purple(2).jpg") %>
   <div class="form_connection">
-    <h2>URBAN EMPORIUM</h2>
-    <h4><i>Bienvenue ! Inscrivez-vous pour commencer.</i></h4>
+    <br>
+    <h2>BIENVENUE SUR PINTIQ</h2>
+    <br>
+    <h4><i>Inscrivez-vous pour commencer.</i></h4>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
