correction admin + improv methode destreoy

--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -24,8 +24,7 @@
  
 
       
-      <br><br> <br><br><br><br> <br><br>
-      <%= link_to destroy_user_session_path, method: :delete do%> Déconnexion <%end%>
+      <%= link_to destroy_user_session_path, method: :delete, style: "bottom: -50px;" do%> Déconnexion <%end%>
     <% else %>
       <%= link_to new_user_session_path do %> Connexion  <i class="fa fa-angle-right"></i> <%end%>
         <hr class="style13">
