--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -6,7 +6,7 @@
   <%= render 'layouts/viewshop' %>
   <% @places_count = current_user.place_createds.count  %>
   <% if @places_count == 0%>
-    <span id="infobulle"><b><%= current_user.username.capitalize%></b>, tu n'as aucune boutique :( <br> Ajoutes-en une en utilisant <i class="fa fa-arrow-right" style="font-size:20px;"></i></span>
+    <span id="infobulle"><b><%= current_user.username.capitalize%></b>, tu n'as aucune boutique :( <br> Ajoutes-en une en utilisant le bouton + <i class="fa fa-arrow-right" style="font-size:20px;"></i></span>
   <%else%>
     <%= @places_count %>
   <%end%>
