--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -19,18 +19,7 @@
         <%= submit_tag "Rechercher", :id => "add" %>
       </div>
     </div>
-
-    <div id="list_show">      
-      <i class="fa fa-heart" id="fav" onclick="favorite()" style="color: rgb(255,0,0);" ></i>
-
-      <h3>NOM boutique</h3>
-      <hr>
-      <div id="distance">Distance</div>
-      <p>Adresse</p>
-      <div class='tags'><p>Tag 1</p></div>
-      <div class='tags'><p>Tag 2</p></div>
-      <div class='tags'><p>Tag 2</p></div>
-
-    </div>
-
   </div>
+</div>
+
+<%= javascript_include_tag 'category' %> 
