--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="wrap-list">
-  <div id='liste'>
+  <div id='global'>
     <%= image_tag("photos/purple(2).jpg", class: "img-bg") %>
     <div id="list_show">
       <h1 align="center">Rechercher par catégories</h1>
@@ -28,9 +28,9 @@
         <div class="distance">Distance</div>
         <p>Adresse</p>
         <div style="text-align: center;" >
-            <div class='tags'>Tag 1</div>
-            <div class='tags'>Tag 2</div>
-            <div class='tags'>Tag 2</div>
+            <p class='tags'>Tag 1</p>
+            <p class='tags'>Tag 2</p>
+            <p class='tags'>Tag 2</p>
         </div>
         
     </div>
