--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar" id="navbar">
  
   <li><a href="<%=root_path%>">CARTE <i class="fa fa-map"></i></a>
-  <li><a href="#">LISTE DES BOUTIQUES <i class="fa fa-list"></i></a>
+  <li><a href="<%=category_path%>">LISTE DES BOUTIQUES <i class="fa fa-list"></i></a>
   <% if user_signed_in? %>
     <li><a href="<%=favoris_path%>">FAVORIS <i class="fa fa-heart"></i></a> 
     <li><a onclick="toggleSettingsMenu()">COMMUNAUTÉ <i class="fa fa-users"></i></a>
@@ -16,7 +16,7 @@
 
 <div class="navbar-mobile" id="navbar">
   <li><a href="/"><i class="fa fa-map"></i></a>
-  <li><a href="#"><i class="fa fa-list"></i></a>
+  <li><a href="<%=category_path%>"><i class="fa fa-list"></i></a>
   <% if user_signed_in? %>
       <li><a href="<%=favoris_path%>"><i class="fa fa-heart"></i></a>
     <li><a onclick="toggleSettingsMenu()"><i class="fa fa-users"></i></a>
