--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -2,8 +2,9 @@
 
 
 <div class="wrap-list">
-  <div id='global'>
-    <%= image_tag("photos/purple(2).jpg", class: "img-bg") %>
+      <%= image_tag("photos/purple(2).jpg", class: "img-bg") %>
+
+  <div id='liste'>
     <div id="list_show">
       <h1 align="center">Rechercher par catégories</h1>
       <div >
