--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -57,7 +57,7 @@ masuperfonction = function() {
           $(marker).click(function() {
             openNav();
             $("#mainSidenav").html("");
-            o = document.getElementById('i');
+            o = document.createElement("i");
             m = document.createElement("p");
             l = document.createElement("p");
             k = document.createElement("a");
