--- a/app/views/layouts/_viewshop.html.erb
+++ b/app/views/layouts/_viewshop.html.erb
@@ -8,8 +8,12 @@
   	<i class="fa fa-heart" id="fav" onclick="favorite(local.id, data.responseJSON.rendu[1])" style="color: rgb(255,0,0);" ></i>
   </div>
 
-  <div id="addressNav" class="addressnav">
+  <div id="addressnav" class="addressnav">
   	<p> Addresse : </p>
+  </div>
+
+  <div id="comNav" class="comnav">
+  	
   </div>
 </div>
 
