form de contact les kheys

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,7 @@
 <%= render 'layouts/navbar'%> 
 
 
-
+   <%= form_tag '/' do%>
 	<div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
 		<div class="container-contact2">
 			<div class="wrap-contact2">
@@ -29,8 +29,10 @@
 						<div class="wrap-contact2-form-btn">
 							<div class="contact2-form-bgbtn"></div>
 							<button class="contact2-form-btn">
-								Envoyer
+								Envoyer 
 							</button>
+							<button> <%= submit_tag "Envoyer", class: "contact2-form-btn" %></button>
+							<%end%>
 						</div>
 					</div>
 				</form>
