--- a/app/views/place/category.html.erb
+++ b/app/views/place/category.html.erb
@@ -15,7 +15,7 @@
         <% end %>
         </div>
         <br>
-        <%= submit_tag "Rechercher", :id => "add" %>
+        <%= submit_tag "Rechercher", :id => "add", :style => "margin-left: 10%;" %>
       </div>
     </div>
     <div id="global">
