--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -77,16 +77,23 @@
   }
 }
 
-// sdfghjklkjhgfghjkljhgfdfgjkhgfdfjkjhgf
-
+// DIV GLOBAL POUR PAGE CATEGORY
+#adresse{
+  margin-top: 30px;
+}
 #global {
   position: fixed; 
   min-width: 100%; 
-  height:95%;
-  overflow: auto;
+  height: 58%;
+    overflow: auto;
 
 }
-
+#distance{
+  padding-right: 10px;
+  float: right;
+  font-style: oblique;
+  color: #4a4848;
+}
 .img-bg {
   position: fixed; 
   top: 0; 
@@ -172,7 +179,7 @@
     margin-top:40px!important;
   }
   #global{
-    height:90%;
+    height: 53%;
   }
 
   #list_show{
