--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -26,7 +26,7 @@
                     <% if user.try(:admin?) %>
                         <a>Admin <i class="fa fa-minus-circle"></i></a>
                     <%else%>
-                        <%= link_to '/pages/' + user.id.to_s , method: :delete, data: { confirm: "Supprimer le profil ? Action irréversible !" } do%><i class="fa fa-trash"></i> <%end%>
+                        <%= link_to "/admin/" + user.id.to_s , method: :delete, data: { confirm: "Supprimer le profil ? Action irréversible !" } do%><i class="fa fa-trash"></i> <%end%>
                      
                      <%end%>
                 </div>
