overlay qui marche avec coeur wesh

--- a/app/views/layouts/_viewshop.html.erb
+++ b/app/views/layouts/_viewshop.html.erb
@@ -1,19 +1,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div id="mainSidenav" class="mainsidenav">
-  	<p> Nom : </p>>
-  </div>
-      
-  <div id="favSidenav" class="favsidenav"> 
-  	<i class="fa fa-heart" id="fav" onclick="favorite(local.id, data.responseJSON.rendu[1])" style="color: rgb(255,0,0);" ></i>
-  </div>
-
-  <div id="addressnav" class="addressnav">
-  	<p> Addresse : </p>
-  </div>
-
-  <div id="comNav" class="comnav">
-  	
-  </div>
+  <div id="mainSidenav" class="mainsidenav"></div>
+  <div id="favSidenav" class="favsidenav"></div>
 </div>
 
