prod auto depuis branche front

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -78,7 +78,7 @@ masuperfonction = function() {
               
               $(address_shop).appendTo($("#mainSidenav"));
             }
-            $(favori_nav).html("Ajouter aux favoris, clique ");
+            $(favori_nav).html("Ajouter aux favoris ? ");
             $(favori_nav).appendTo($("#mainSidenav"));
 
             let bolle = false;
