--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,7 @@
 
 <div class= "contactform">
    <%= form_tag '/' do%>
-	<div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
+	<div class="bg-contact2">
 		<div class="container-contact2">
 			<div class="wrap-contact2">
 				<form class="contact2-form validate-form">
