--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,6 @@ body, html, .button-green{
     margin:0;
     height: 100%;
     font-family: Lato-light;
-    overflow: scroll;
+    overflow: auto;
 }
 
