--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -40,7 +40,7 @@
     margin-top: 50px;
     width: 40%;
     margin-left: 30%;
-    overflow: scroll;
+    overflow: auto;
     h2{
         margin-bottom: -10px;
     }
